--- a/database/package.json
+++ b/database/package.json
@@ -4,12 +4,15 @@
   "description": "read rest full api and connect mongoDB and frontend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-dev": "dotenv_config_path=.env.development nodemon index.js",
+    "start-prod": "dotenv_config_path=.env.production nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
